--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:17.0.0'
     implementation 'com.google.android.material:material:1.1.0'
 
+    //noinspection GradleCompatible
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+
+
 }
