--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,7 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 
+    implementation 'com.google.firebase:firebase-auth:18.0.0'
+
 
 }
