--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AddThoughtActivity"></activity>
+        <activity android:name=".CreateUserActivity"></activity>
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".AddThoughtActivity" />
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main2"
