--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,11 +8,12 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CreateUserActivity"></activity>
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".AddThoughtActivity" />
+        <activity android:name=".Activities.CommentsActivity"></activity>
+        <activity android:name=".Activities.CreateUserActivity" />
+        <activity android:name=".Activities.LoginActivity" />
+        <activity android:name=".Activities.AddThoughtActivity" />
         <activity
-            android:name=".MainActivity"
+            android:name=".Activities.MainActivity"
             android:label="@string/title_activity_main2"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
