--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.CommentsActivity"></activity>
+        <activity android:name=".Activities.UpdateCommentActivity"></activity>
+        <activity android:name=".Activities.CommentsActivity" />
         <activity android:name=".Activities.CreateUserActivity" />
         <activity android:name=".Activities.LoginActivity" />
         <activity android:name=".Activities.AddThoughtActivity" />
